# SmartBriteDesktop

./: index.html  package.json  pnpm-lock.yaml  tailwind.config.js  test.html
.github/workflows/: publish.yaml
src/: global.css  main.tsx  router.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: ble.rs  error.rs  led.rs  lib.rs  main.rs  state.rs
src-tauri/src/transmission/: mod.rs  msg.rs
src/api/: index.ts  interface.ts
src/components/: CreateScenes.tsx  DeviceItem.tsx  Layout.tsx  Scene.tsx  SceneSelect.tsx  Slider.tsx
src/components/ColorPopover/: index.module.less  index.tsx
src/components/createScenes/: ColorPopover.tsx  index.tsx
src/components/devices/: AddDeviceModal.tsx  AddTimeTaskModal.tsx  DeviceItem.tsx
src/components/scenes/: Scene.tsx  SceneItem.tsx  SceneSelect.tsx
src/components/scenes/createScenes/: Colors.tsx  index.tsx
src/components/schedule/: MiniTimeTask.tsx  TimeTaskItem.tsx  createTimeTask.tsx
src/hooks/: useLedControl.ts  useTheme.tsx  useUpdater.ts
src/pages/: ErrorBoundary.tsx  Home.tsx  NotFound.tsx
src/pages/devices/: AddDevice.tsx  DeviceConfig.tsx  index.tsx
src/pages/scenes/: index.tsx
src/pages/schedule/: index.tsx
src/stores/: useDeviceStore.ts  useScenesStore.ts  useTimeTaskStore.ts
